--- a/ClipboardFun/Views/MainWindow.xaml
+++ b/ClipboardFun/Views/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:ClipboardFun"
         mc:Ignorable="d"
         Title="Clipboard Fun" Height="1000" Width="1800">
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding PasetCmd}" Gesture="Ctrl+v"/>
+    </Window.InputBindings>
     <DockPanel LastChildFill="True">
         <Menu DockPanel.Dock="Top" Margin="0,0,0.4,0">
             <MenuItem Header="_Clear All" Command="{Binding ClearCmd}"/>
